<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="hello">Menu</string>
    <string name="app_name">HiOA Recruiting Bait</string>
    
    <!-- BaitActivity variables -->
    <string name="bait_header_text">Arduino Kontrollpanel</string>
        
    <string name="bait_top_left">Led av</string>
    <string name="bait_top_right">Led på</string>
    <string name="bait_bottom_left">Bottom L</string>
    <string name="bait_bottom_right">Bottom R</string>
    
    <string name="bait_option_menu_about">Om</string>
    <string name="bait_option_menu_connect">Koble til</string>

    <!-- ConnectionActivity variables -->
    <string name="connection_activity_header_text">Bluetooth Kontrollpanel</string>
    <string name="connection_toggle_bluetooth_button_on">Bluetooth på</string>
    <string name="connection_toggle_bluetooth_button_off">Bluetooth av</string>
    <string name="connection_scan_button_text">Søk etter enheter</string>
    <string name="connection_console_button_text">Konsoll</string>
    
    <!-- ConsoleActivity variables --> 
    <string name="console_sumit">Exe</string>
    <string name="console_command_in_hint">Kommando</string>
    
</resources>