<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">
	
	<!-- Header -->
    <include
        android:id="@+id/header" 
        layout="@layout/header"/>
	
	<!-- Footer -->
    <include
        android:id="@+id/footer" 
        layout="@layout/footer"/>

	<!-- Body -->
	<LinearLayout 
        android:id="@+id/connection_body"
        android:layout_width="match_parent" 
        android:layout_height="match_parent"
        android:layout_below="@id/header" 
        android:layout_above="@id/footer"
        android:orientation="vertical"
        android:paddingBottom="5sp" 
        android:background="@color/background_grey">
	    
	    <TextView 
  		    android:id="@+id/connection_activity_header_text"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="5dp" 
		    android:layout_marginBottom="3dp"
		    android:text="@string/connection_activity_header_text"
		    android:textSize="18dp"
		    android:textStyle="bold"
		    android:textColor="@color/dark_grey"
		    android:gravity="center_horizontal" />
	    
  		<View 
		    android:id="@+id/connection_header_spacer"
   		    android:layout_width="250dp" 
		    android:layout_height="2dp" 
		    android:layout_marginBottom="10dp"
		    android:layout_gravity="center_horizontal" 
		    android:background="@color/grey" />

  		<LinearLayout 
	    	android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
		    
  		    <ToggleButton
			    android:id="@+id/connection_toggle_bluetooth_button"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textOn="@string/connection_toggle_bluetooth_button_on"
			    android:textOff="@string/connection_toggle_bluetooth_button_off"/>
			
			<Button
				android:id="@+id/connection_scan_for_devices_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/connection_scan_button_text" />
			
			<Button
				android:id="@+id/connection_console_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/connection_console_button_text" />
  		</LinearLayout>

		<ListView
		  android:id="@+android:id/list"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content" >
		</ListView>
		
	</LinearLayout>
	
</RelativeLayout>